# Cpp-Utils

./: .clang-tidy  .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  afterdoc_8h_source.html  annotated.html  autolink_8cpp.html  benchmark.cpp  bug.html  classA-members.html  classA.html  classAfterdoc__Test-members.html  classAfterdoc__Test.html  classAutolink__Test-members.html  classAutolink__Test.html  classB-members.html  classB.html  classC-members.html  classC.html  classC1.html  classC2.html  classC3.html  classC4.html  classC5.html  classD-members.html  classD.html  classE-members.html  classE.html  classEnum__Test-members.html  classEnum__Test.html  classExample__Test-members.html  classExample__Test.html  classFn__Test-members.html  classFn__Test.html  classInclude__Test-members.html  (+205 more)
.github/workflows/: build.yml  build_and_test.yml  codecov.yml  doxygen.yml  release.yml
cmake/: AnnoTestConfig.cmake.in  CppUtilsConfig.cmake.in  DiscoverTests.cmake  DiscoverTestsRunner.cmake
cmake/CppUtils/: CppUtilsConfig.cmake.in  DiscoverTestsRunner.cmake
data_structures/: CMakeLists.txt  array.cxx  data_structures.cxx  stream.cxx  vector.cxx
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: index.rst
docs/source/api/testing/: annotations.rst  assertions.rst  contracts.rst  death.rst  index.rst
docs/source/examples/: basic.rst  contracts.rst  death_tests.rst  full_suite.rst  index.rst  lifecycle.rst  os_annotations.rst  parameterized.rst
docs/source/usage/: getting_started.rst
examples/: CMakeLists.txt  example01_basic.cpp  example02_lifecycle.cpp  example03_parameterized.cpp  example04_os_annotations.cpp  example05_death_tests.cpp  example06_contracts.cpp  example07_full_suite.cpp  testing_example1.cpp
include/: Asserts.cxx  DeathTest.cxx  Exceptions.cxx  Expects.cxx  Posix.cxx  README.md  Test.cxx  Tuple.cxx  asserts.cxx  contracts.cxx  death_test.cxx  exceptions.cxx  expects.cxx  test.cxx  tuple.cxx  utils.cxx
memory/: CMakeLists.txt  Memory.cxx
memory/tests/: CMakeLists.txt  Memory.cpp
refl/: CMakeLists.txt
refl_utils/: CMakeLists.txt  utils.cxx
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_9.js  all_b.js  all_e.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_8.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  functions_1.js  functions_12.js  functions_3.js  functions_6.js  functions_8.js  groups_0.js  pages_1.js  pages_3.js  pages_4.js  searchdata.js
testing/: Asserts.cxx  CMakeLists.txt  DeathTest.cxx  Exceptions.cxx  Expects.cxx  Posix.cxx  Test.cxx  Tuple.cxx
testing/tests/: CMakeLists.txt  Test.cpp
tests/: CMakeLists.txt  Test.cpp  assertion_tests.cpp  test.cpp
